--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-Flask~=1.1
-Flask-SQLAlchemy~=2.4
-psycopg2-binary==2.8.6
-Flask-DebugToolbar
+certifi==2021.5.30
+charset-normalizer==2.0.3
+click==8.0.1
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+psycopg2==2.9.1
+requests==2.26.0
+SQLAlchemy==1.4.22
+urllib3==1.26.6
+Werkzeug==2.0.1
